--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -307,8 +307,8 @@
   height: 56px;
   border-radius: 50%;
 
-  background-color: var(--md-sys-color-primary);
-  color: var(--md-sys-color-on-primary);
+  background-color: var(--color-red);
+  color: var(--color-on-background);
 
   border: none;
   outline: none;
@@ -330,7 +330,8 @@
 
 /* Hover state: slight elevation & tone shift */
 .fab:hover {
-  background-color: var(--md-sys-color-secondary);
+  background-color: var(--md-sys-color-primary-container);
+  color:var(--md-sys-color-on-primary-container);
   box-shadow:
     0 2px 4px rgba(0, 0, 0, 0.25),
     0 6px 12px rgba(0, 0, 0, 0.15);
@@ -354,9 +355,10 @@
 .fab svg {
   width: 28px;
   height: 28px;
-  fill: currentColor;
+  /* fill: var(--color-on-background); */
   pointer-events: none;
   transition: fill 0.2s ease;
+  fill:currentColor;
 }
 
 /* Optional fab hide animation */
@@ -497,12 +499,12 @@ img {
   text-align: start;
 }
 
-/* === Alignment Variant: Right Aligned === */
+/* Alignment Variant: Right Aligned */
 .card.align-right {
   text-align: end;
 }
 
-/* === Card Media (Image) === */
+/* Card Media (Image) */
 .card-media {
   max-width: 35vw;
   max-height: 70vh;
@@ -511,7 +513,7 @@ img {
   align-self: flex-start;
 }
 
-/* === Card Content === */
+/* Card Content */
 .card-content {
   display: flex;
   flex-direction: column;
@@ -520,7 +522,7 @@ img {
   text-decoration: none;
 }
 
-/* === Align Content Within Card === */
+/* Align Content Within Card */
 .card.align-right .card-content {
   align-items: flex-end;
 }
@@ -529,7 +531,7 @@ img {
   align-items: flex-start;
 }
 
-/* === Link Group Inside Cards === */
+/* Link Group Inside Cards */
 .card .link-with-icon-group {
   display: flex;
   flex-direction: column;
