--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -76,14 +76,17 @@ p {
 /* Links */
 a {
   color: var(--md-sys-color-primary);
+  /* opacity: 0.8; */
   text-decoration: none;
   cursor: pointer;
-  transition: color var(--md-sys-motion-short);
+  /* transition: color var(--md-sys-motion-short); */
+  transition: opacity var(--md-sys-motion-short), colorvar(--md-sys-motion-short);
 }
 
 a:hover,
 a:focus {
-  color: var(--md-sys-color-primary-dark);
+  color: var(--md-sys-color-on-background);
+  /* opacity: 1; */
   outline: none;
 }
 
@@ -125,18 +128,33 @@ footer p {
 
 /* Footer links */
 footer a {
-  color: var(--md-sys-color-primary);
-  text-decoration: none;
-  font-weight: 500;
-  font-size: var(--md-sys-typescale-body-small);
-  transition: color var(--md-sys-motion-short);
+  position: relative;
+  overflow: hidden;
 }
 
-/* Interaction states for links */
-footer a:hover,
-footer a:focus,
-footer a:active {
-  color: var(--md-sys-color-primary-dark);
+/* === Underline Animation === */
+footer a::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -2px;
+  width: 50%;
+  height: 1px;
+  background-color: currentColor;
+  border-radius: 2px;
+  opacity: 0;
+  transform: translateX(-50%);
+  transition:
+    width var(--md-sys-motion-short),
+    opacity var(--md-sys-motion-short);
+}
+
+footer a:hover::after,
+footer a:focus::after,
+footer a:active::after {
+  width: 100%;
+  opacity: 1;
+  left: 50%;
 }
 
 footer .container {
